--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,1 +1,6 @@
-numpy>=1.21.0 tensorflow>=2.10.0 scikit-learn>=1.0.0 scikit-image>=0.19.0 tqdm>=4.62.0 matplotlib>=3.5.0
+numpy
+tensorflow
+scikit-learn
+scikit-image
+tqdm
+matplotlib
